force-app/main/default/objects/Asset/fields/Asset_Warranties_Under_Warranty_Count__c.field-meta.xml
<CustomField>
    <fullName>Asset_Warranties_Under_Warranty_Count__c</fullName>
    <label>Asset Warranties Under Warranty Count</label>
    <summaryFilterItems>
        <field>AssetWarranty.Status__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>AssetWarranty.AssetId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>