force-app/main/default/objects/Asset/fields/Bassin_deversoir_a_ouvrir__c.field-meta.xml
<CustomField>
    <fullName>Bassin_deversoir_a_ouvrir__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bassin déversoir à ouvrir</label>
    <type>Checkbox</type>
</CustomField>