force-app/main/default/objects/Asset/fields/Complete_Address__c.field-meta.xml
<CustomField>
    <fullName>Complete_Address__c</fullName>
    <formula>Address__r.Complete_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complete Address</label>
    <type>Text</type>
</CustomField>