force-app/main/default/objects/Asset/fields/Complexite__c.field-meta.xml
<CustomField>
    <fullName>Complexite__c</fullName>
    <label>Complexité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facile</fullName>
            </value>
            <value>
                <fullName>Moyenne</fullName>
            </value>
            <value>
                <fullName>Difficile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>