force-app/main/default/objects/Asset/fields/Complexite_commentaire__c.field-meta.xml
<CustomField>
    <fullName>Complexite_commentaire__c</fullName>
    <label>Complexité commentaire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>