force-app/main/default/objects/Asset/fields/Description_du_produit__c.field-meta.xml
<CustomField>
    <fullName>Description_du_produit__c</fullName>
    <label>Z_Description du produit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>