force-app/main/default/objects/Asset/fields/Installer_filet_meche__c.field-meta.xml
<CustomField>
    <fullName>Installer_filet_meche__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Installer filet mèche</label>
    <type>Checkbox</type>
</CustomField>