force-app/main/default/objects/Asset/fields/Installer_toile_d_hiver__c.field-meta.xml
<CustomField>
    <fullName>Installer_toile_d_hiver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Installer toile d&apos;hiver</label>
    <type>Checkbox</type>
</CustomField>