force-app/main/default/objects/Asset/fields/Label_Field_Extras_Fermeture__c.field-meta.xml
<CustomField>
    <fullName>Label_Field_Extras_Fermeture__c</fullName>
    <formula>&apos;Extras Fermeture&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>‎ ‎ ‎</label>
    <type>Text</type>
</CustomField>