force-app/main/default/objects/Asset/fields/Label_Field_Fermeture_SPA__c.field-meta.xml
<CustomField>
    <fullName>Label_Field_Fermeture_SPA__c</fullName>
    <formula>&apos;Fermeture SPA&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>‎</label>
    <type>Text</type>
</CustomField>