force-app/main/default/objects/Asset/fields/Label_Field_Ouverture__c.field-meta.xml
<CustomField>
    <fullName>Label_Field_Ouverture__c</fullName>
    <formula>&apos;Ouverture&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>‎ ‎ ‎ ‎</label>
    <type>Text</type>
</CustomField>