force-app/main/default/objects/Asset/fields/Labor_Force_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Labor_Force_Warranty__c</fullName>
    <formula>Product2.Labor_Force_Warranty__c</formula>
    <inlineHelpText>From product, warranty on labor force in days.</inlineHelpText>
    <label>Labor Force Warranty (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>