force-app/main/default/objects/Asset/fields/Nage_sur_place__c.field-meta.xml
<CustomField>
    <fullName>Nage_sur_place__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nage sur place</label>
    <type>Checkbox</type>
</CustomField>