force-app/main/default/objects/Asset/fields/Nettoyer_Accutab__c.field-meta.xml
<CustomField>
    <fullName>Nettoyer_Accutab__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nettoyer Accutab</label>
    <type>Checkbox</type>
</CustomField>