force-app/main/default/objects/Asset/fields/Nombre_de_lames_d_eau__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_lames_d_eau__c</fullName>
    <label>Nombre de lames d&apos;eau</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>