force-app/main/default/objects/Asset/fields/Nombre_de_sacs_de_sel__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_sacs_de_sel__c</fullName>
    <label>Nombre de sacs de sel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>