force-app/main/default/objects/Asset/fields/Nombre_pompes_supplementaires__c.field-meta.xml
<CustomField>
    <fullName>Nombre_pompes_supplementaires__c</fullName>
    <label>Nombre pompes supplémentaires</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>