force-app/main/default/objects/Asset/fields/Ouverture__c.field-meta.xml
<CustomField>
    <fullName>Ouverture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ouverture</label>
    <type>Checkbox</type>
</CustomField>