force-app/main/default/objects/Asset/fields/Prix_fermeture__c.field-meta.xml
<CustomField>
    <fullName>Prix_fermeture__c</fullName>
    <label>Prix fermeture</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>