force-app/main/default/objects/Asset/fields/Prix_ouverture__c.field-meta.xml
<CustomField>
    <fullName>Prix_ouverture__c</fullName>
    <label>Prix ouverture</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>