force-app/main/default/objects/Asset/fields/Prix_ouverture_SPA__c.field-meta.xml
<CustomField>
    <fullName>Prix_ouverture_SPA__c</fullName>
    <label>Prix ouverture SPA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>