force-app/main/default/objects/Asset/fields/Prix_vider_laver__c.field-meta.xml
<CustomField>
    <fullName>Prix_vider_laver__c</fullName>
    <label>Prix vider-laver</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>