force-app/main/default/objects/Asset/fields/Product_Installation_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Product_Installation_Warranty__c</fullName>
    <formula>Product2.Product_and_Installation_Warranty__c</formula>
    <inlineHelpText>From product, warranty on product and installation in days.</inlineHelpText>
    <label>Product &amp; Installation Warranty (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>