force-app/main/default/objects/Asset/fields/Product_Installation_Warranty_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_Installation_Warranty_End_Date__c</fullName>
    <inlineHelpText>From asset warranty, end date of warranty on product and installation.</inlineHelpText>
    <label>Product &amp; Installation Warranty End Date</label>
    <summarizedField>AssetWarranty.EndDate</summarizedField>
    <summaryFilterItems>
        <field>AssetWarranty.WarrantyType</field>
        <operation>equals</operation>
        <value>Product &amp; Installation</value>
    </summaryFilterItems>
    <summaryForeignKey>AssetWarranty.AssetId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>