force-app/main/default/objects/Asset/fields/Product_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Product_Warranty__c</fullName>
    <formula>Product2.Product_Warranty__c</formula>
    <inlineHelpText>From product, warranty on product in days.</inlineHelpText>
    <label>Product Warranty (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>