force-app/main/default/objects/Asset/fields/Retirer_filet__c.field-meta.xml
<CustomField>
    <fullName>Retirer_filet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retirer filet</label>
    <type>Checkbox</type>
</CustomField>