force-app/main/default/objects/Asset/fields/Retirer_toile__c.field-meta.xml
<CustomField>
    <fullName>Retirer_toile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retirer toile</label>
    <type>Checkbox</type>
</CustomField>