force-app/main/default/objects/Asset/fields/SPA_a_ouvrir__c.field-meta.xml
<CustomField>
    <fullName>SPA_a_ouvrir__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SPA à ouvrir</label>
    <type>Checkbox</type>
</CustomField>