force-app/main/default/objects/Asset/fields/Superficie_pc__c.field-meta.xml
<CustomField>
    <fullName>Superficie_pc__c</fullName>
    <label>Superficie (pc)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>