force-app/main/default/objects/Asset/fields/TECH_Product_ServiceType__c.field-meta.xml
<CustomField>
    <fullName>TECH_Product_ServiceType__c</fullName>
    <formula>TEXT(Product2.Service_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_Product_ServiceType</label>
    <type>Text</type>
</CustomField>