force-app/main/default/objects/Asset/fields/Temps_estime_fermeture__c.field-meta.xml
<CustomField>
    <fullName>Temps_estime_fermeture__c</fullName>
    <label>Temps estimé fermeture (en heures)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>