force-app/main/default/objects/Asset/fields/Under_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Under_Warranty__c</fullName>
    <formula>Asset_Warranties_Under_Warranty_Count__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Under Warranty?</label>
    <type>Checkbox</type>
</CustomField>