force-app/main/default/objects/Asset/fields/Vider_Laver__c.field-meta.xml
<CustomField>
    <fullName>Vider_Laver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vider/Laver</label>
    <type>Checkbox</type>
</CustomField>