force-app/main/default/objects/Asset/listViews/Assets_Under_Warranty.listView-meta.xml
<ListView>
    <fullName>Assets_Under_Warranty</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>ASSET.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Under_Warranty__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Assets Under Warranty</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>